--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Gold Rate App</title>
+    <title>Privacy Policy - Fancy Jewellers App</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,11 +11,16 @@
             line-height: 1.6;
             background-color: #f9f9f9;
             color: #333;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
         }
         header {
             background-color: #ffd700;
-            padding: 10px 20px;
+            padding: 20px;
             text-align: center;
+            border-radius: 8px;
+            margin-bottom: 20px;
         }
         header h1 {
             margin: 0;
@@ -23,12 +28,15 @@
         }
         section {
             background: #fff;
-            padding: 20px;
+            padding: 30px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
         }
         h2 {
             color: #444;
+            border-bottom: 2px solid #ffd700;
+            padding-bottom: 10px;
         }
         a {
             color: #ffd700;
@@ -37,40 +45,59 @@
         a:hover {
             text-decoration: underline;
         }
+        .last-updated {
+            font-style: italic;
+            color: #666;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
-
 <header>
     <h1>Privacy Policy</h1>
 </header>
-
 <section>
-    <h2>Introduction</h2>
-    <p>Welcome to our Gold Rate App. Your privacy is important to us. This privacy policy explains how we handle your data when you use our app to check live gold rates and calculate jewelry rates.</p>
+    <h2>About Us</h2>
+    <p>This privacy policy applies to the Fancy Jewellers App developed by Mukul Rai ("we," "us," or "our"), available on the Google Play Store. This policy explains how we handle data when you use our application to check live gold rates and calculate jewelry rates.</p>
 
-    <h2>No User Information Collected</h2>
-    <p>We do not collect, store, or process any personal or sensitive information from users. The app is designed to function without requiring any data input beyond what is necessary for the calculations, which is done entirely on your device.</p>
+    <h2>Data Collection and Use</h2>
+    <p>The Fancy Jewellers App is designed with your privacy in mind. Here's what you should know about how we handle data:</p>
+    <ul>
+        <li><strong>Personal Data:</strong> We do not collect, store, or process any personal information from users.</li>
+        <li><strong>App Functionality Data:</strong> All calculations and operations are performed locally on your device.</li>
+        <li><strong>Device Permissions:</strong> Our app only requests essential permissions required for basic functionality, including SYSTEM_ALERT_WINDOW for displaying overlay windows when necessary.</li>
+    </ul>
 
     <h2>Data Security</h2>
-    <p>Since no user information is collected, there is no data stored on our servers. All calculations and operations are performed locally on your device, ensuring complete privacy.</p>
+    <p>We implement appropriate technical and organizational measures to ensure a level of security appropriate to the risk, even though we don't collect personal data. All calculations are performed locally on your device, ensuring complete privacy. Our app uses secure HTTPS connections only, as we have disabled cleartext traffic for enhanced security.</p>
 
     <h2>Third-Party Services</h2>
-    <p>Our app may integrate with third-party services to fetch live gold rates. These services have their own privacy policies, and we recommend reviewing them.</p>
+    <p>Our app integrates with third-party services to fetch live gold rates. These services include:</p>
+    <ul>
+        <li>Gold Rate API providers</li>
+        <li>Google Play Services</li>
+    </ul>
+    <p>Each third-party service operates under its own privacy policy. We recommend reviewing their respective privacy policies for more information.</p>
 
-    <h2>Cookies</h2>
-    <p>Our app does not use cookies or similar technologies to track user activity.</p>
+    <h2>Data Retention and Deletion</h2>
+    <p>Since we don't collect or store any user data on our servers, there is no data retention period. All local data can be removed by uninstalling the app from your device.</p>
+
+    <h2>Children's Privacy</h2>
+    <p>Our app does not knowingly collect any personal information from children under 13 years of age. The app is designed for general audience use.</p>
 
     <h2>Changes to This Privacy Policy</h2>
-    <p>We may update this privacy policy periodically. Any changes will be reflected on this page with an updated effective date.</p>
+    <p>We reserve the right to update this privacy policy at any time. We will notify users of any material changes by posting the new privacy policy on this page and updating the "Last Updated" date.</p>
 
-    <h2>Contact Us</h2>
-    <p>If you have any questions about this privacy policy, please contact us:</p>
+    <h2>Contact Information</h2>
+    <p>For any questions or concerns about this privacy policy or our app, please contact us:</p>
     <ul>
-        <li>Email: <a href="mailto:support@goldrateapp.com">mukul93028@gmail.com</a></li>
+        <li>Developer: Mukul Rai</li>
+        <li>Email: <a href="mailto:mukul93028@gmail.com">mukul93028@gmail.com</a></li>
         <li>Phone: +918871266742</li>
+        <li>Address: [Your Business Address]</li>
     </ul>
-</section>
 
+    <p class="last-updated">Last Updated: January 27, 2025</p>
+</section>
 </body>
 </html>
