--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <li>Developer: Mukul Rai</li>
         <li>Email: <a href="mailto:mukul93028@gmail.com">mukul93028@gmail.com</a></li>
         <li>Phone: +918871266742</li>
-        <li>Address: [Your Business Address]</li>
+        <li>Address: Parkota Sagar M.P<li>
     </ul>
 
     <p class="last-updated">Last Updated: January 27, 2025</p>
