--- a/index.html
+++ b/index.html
@@ -92,9 +92,11 @@
     <p>For any questions or concerns about this privacy policy or our app, please contact us:</p>
     <ul>
         <li>Developer: Mukul Rai</li>
+        <li>Owner:Ashish Jain</li>  
         <li>Email: <a href="mailto:mukul93028@gmail.com">mukul93028@gmail.com</a></li>
         <li>Phone: +918871266742</li>
         <li>Address: Parkota Sagar M.P<li>
+          
     </ul>
 
     <p class="last-updated">Last Updated: January 27, 2025</p>
